--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ backend/
 *.bak
 *.env
 *.log
+
+# exclude everything in assets/css/bootswatch except the assets/css/bootswatch/dist/cyborg/
+assets/css/bootswatch/*
+!assets/css/bootswatch/dist/cyborg/
