--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ backend/
 *.log
 
 # exclude everything in assets/css/bootswatch except the assets/css/bootswatch/dist/cyborg/
-assets/css/bootswatch/*
-!assets/css/bootswatch/dist/cyborg/
+# assets/css/bootswatch/*
+# !assets/css/bootswatch/dist/cyborg/
