--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ backend/
 # exclude everything in assets/css/bootswatch except the assets/css/bootswatch/dist/cyborg/
 assets/css/bootswatch/*
 !assets/css/bootswatch/dist/cyborg/*
+
+pen*/
+pen-*.zip
