--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,6 @@
-# Ignore backend for now, so I don't accidentally leak secrets
-# backend/
-# *.php
-*.sql
+# Ignore everything, except the dist directory
+/*
 
-# Ignore these files too
-*.bak
-*.env
-*.log
-
-# exclude everything in assets/css/bootswatch except the assets/css/bootswatch/dist/cyborg/
-assets/css/bootswatch/*
-!assets/css/bootswatch/dist/cyborg/*
-
-pen*/
-pen-*.zip
-ad.html
-
-assets/js/fetchUrl.js
-watch.html
+!/dist/
+!/backend/
+!README.md
